# pyhedron

./: .gitignore  Makefile  gitversion.py  pyproject.toml  readme.rst  requirements.txt  setup.py
pyhedron/: __init__.py  __main__.py  csg.py
src/: pyhedron.py
